--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/core": "7.4.0",
     "@mantine/hooks": "7.4.0",
     "@next/bundle-analyzer": "^14.0.1",
+    "@svgr/webpack": "^8.1.0",
     "@tabler/icons-react": "^2.40.0",
     "d3": "^7.8.5",
     "next": "14.0.1",
